--- a/css/style.css
+++ b/css/style.css
@@ -1373,7 +1373,10 @@ hr {
 
 .video-main img {
      width: 100%;
-     height: auto;
+     min-height: 100%;
+     object-fit: cover;
+     align-content: center;
+     justify-content: center;
 
 }
 .video-main section {
